<resources>
    <string name="app_name">fusedapp</string>
    <string name="launch_activity">Launch</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="run">Run</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="headerCalories">Calories</string>
    <string name="headerAvgPace">Avg Pace</string>
    <string name="headerDistance">Distance</string>
    <string name="headerTime">Time</string>
</resources>
